[gd_scene load_steps=25 format=2]

[ext_resource path="res://assets/player/player.gd" type="Script" id=1]
[ext_resource path="res://assets/player/player.png" type="Texture" id=2]
[ext_resource path="res://assets/player/health/PlayerHealth.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/player/states/motion/on_ground/idle.gd" type="Script" id=4]
[ext_resource path="res://assets/player/states/motion/on_ground/move.gd" type="Script" id=5]
[ext_resource path="res://assets/player/states/motion/in_air/jump.gd" type="Script" id=6]
[ext_resource path="res://assets/player/states/action/action.gd" type="Script" id=7]
[ext_resource path="res://assets/player/states/interact/backpack.gd" type="Script" id=8]
[ext_resource path="res://assets/player/states/interact/placeblock.gd" type="Script" id=9]
[ext_resource path="res://assets/player/states/action/stagger.gd" type="Script" id=10]
[ext_resource path="res://assets/player/states/die.gd" type="Script" id=11]
[ext_resource path="res://assets/hud/lootnotifier/loot_notifier_container.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/player/osb_left.png" type="Texture" id=13]
[ext_resource path="res://assets/player/osb_right.png" type="Texture" id=14]
[ext_resource path="res://assets/player/osb_jump.png" type="Texture" id=15]
[ext_resource path="res://assets/player/osb_fire.png" type="Texture" id=16]
[ext_resource path="res://assets/player/placing_block.wav" type="AudioStream" id=17]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( -9.17419, -23.8497, 12.6979, -23.8497, 12.6979, 31.4894, -9.17419, 31.7529 )

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
length = 1.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 16, 32 )

[node name="player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 17
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 3
frame = 1

[node name="LightOccluder2D" type="LightOccluder2D" parent="sprite"]
occluder = SubResource( 1 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 2 )
anims/falling = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/jumping = SubResource( 5 )
anims/walking = SubResource( 6 )

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="collision_dead" type="CollisionShape2D" parent="."]
position = Vector2( 0, 24.5873 )
scale = Vector2( 1, 0.297505 )
shape = SubResource( 7 )
disabled = true

[node name="player_health" parent="." instance=ExtResource( 3 )]

[node name="player_states" type="Node" parent="."]

[node name="idle" type="Node" parent="player_states"]
script = ExtResource( 4 )

[node name="move" type="Node" parent="player_states"]
script = ExtResource( 5 )

[node name="jump" type="Node" parent="player_states"]
script = ExtResource( 6 )

[node name="action" type="Node" parent="player_states"]
script = ExtResource( 7 )

[node name="backpack" type="Node" parent="player_states"]
script = ExtResource( 8 )

[node name="placeblock" type="Node" parent="player_states"]
script = ExtResource( 9 )

[node name="stagger" type="Node" parent="player_states"]
script = ExtResource( 10 )

[node name="die" type="Node" parent="player_states"]
script = ExtResource( 11 )

[node name="player_deathscreen_timer" type="Timer" parent="."]
wait_time = 2.0

[node name="loot_notifier_container" parent="." instance=ExtResource( 12 )]
margin_left = -38.0
margin_top = -111.0
margin_right = 2.0
margin_bottom = -71.0

[node name="ui_touch" type="CanvasLayer" parent="."]

[node name="left" type="TouchScreenButton" parent="ui_touch"]
position = Vector2( -1.56787, 200 )
normal = ExtResource( 13 )
passby_press = true
action = "ui_left"
visibility_mode = 1

[node name="right" type="TouchScreenButton" parent="ui_touch"]
position = Vector2( 76.8394, 200 )
normal = ExtResource( 14 )
passby_press = true
action = "ui_right"
visibility_mode = 1

[node name="jump" type="TouchScreenButton" parent="ui_touch"]
position = Vector2( 335, 200 )
normal = ExtResource( 15 )
passby_press = true
action = "ui_jump"
visibility_mode = 1

[node name="shoot" type="TouchScreenButton" parent="ui_touch"]
position = Vector2( 335, 130 )
normal = ExtResource( 16 )
passby_press = true
action = "ui_shoot"
visibility_mode = 1

[node name="state_label" type="Label" parent="."]
margin_left = 56.0
margin_top = -60.0
margin_right = 96.0
margin_bottom = -46.0
rect_scale = Vector2( 2, 2 )
text = "State"

[node name="kinematic_label" type="Label" parent="."]
margin_left = 57.0
margin_top = -30.0
margin_right = 121.0
margin_bottom = -16.0
rect_scale = Vector2( 2, 2 )
text = "Kinematic"

[node name="block_container" type="Node" parent="."]

[node name="placing_block" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )

[connection signal="animation_finished" from="anim" to="." method="_on_animation_finished"]
[connection signal="health_depleted" from="player_health" to="." method="_on_PlayerHealth_health_depleted"]
[connection signal="player_killed" from="player_health" to="." method="_on_PlayerHealth_player_killed"]
[connection signal="timeout" from="player_deathscreen_timer" to="." method="_on_player_deathscreen_timer_timeout"]
